# m1-lint

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
editors/nvim/: README.md
lua/m1_lint/: init.lua
src/: baseline.rs  config.rs  diagnostic.rs  fix.rs  lib.rs  main.rs  registry.rs  report.rs  runner.rs
src/rules/: l001_line_too_long.rs  l002_trailing_whitespace.rs  l003_missing_final_newline.rs  l004_eq_operator_preferred.rs  l005_logical_operator_preferred.rs  l006_float_eq_comparison.rs  l007_operator_spacing.rs  l008_nesting_too_deep.rs  l009_cyclomatic_complexity.rs  l010_tab_indentation.rs  l011_comment_style.rs  l012_unused_local.rs  l014_expand_undefined_variable.rs  l015_local_missing_initializer.rs  l016_local_variable_naming.rs  l017_magic_number.rs  l018_semicolon_spacing.rs  l019_cognitive_complexity.rs  l020_object_naming.rs  l021_one_statement_per_line.rs  l022_keyword_paren_spacing.rs  l023_call_paren_spacing.rs  l024_ternary_condition_parens.rs  l025_local_scope.rs  l026_top_level_indentation.rs  l027_file_final_blank_line.rs  l028_brace_style.rs  l029_indentation_depth.rs  l030_clause_parentheses.rs  mod.rs
tests/: cli.rs  corpus.rs  fix.rs  fixtures.rs  stdin.rs
tests/fixtures/: l009_complex.diag  l009_complex.m1scr  l010_spaces.diag  l012_unused.diag  l012_unused.m1scr  l014_expand_undef.diag  l014_expand_undef.m1scr  l015_local_no_init.diag  l015_local_no_init.m1scr  l016_local_naming.diag  l016_local_naming.m1scr  l018_semicolon_space.diag  l018_semicolon_space.m1scr  l019_cognitive.diag  l019_cognitive.m1scr  l020_object_naming.diag  l020_object_naming.m1scr  l021_one_stmt.diag  l022_kw_paren.diag  l022_kw_paren.m1scr  l023_call_paren.diag  l024_ternary_parens.diag  l024_ternary_parens.m1scr  l025_local_scope.diag  l025_local_scope.m1scr  l026_top_indent.diag  (+1 more)
(+11 files in other folders)
