[package]
name = "m1-lint"
version = "0.19.0"
edition = "2024"
rust-version = "1.88"
description = "Linter for the MoTeC M1 script language"
license = "GPL-3.0-or-later"

[[bin]]
name = "m1-lint"
path = "src/main.rs"

[lib]
name = "m1_lint"
path = "src/lib.rs"

[dependencies]
m1-core = { git = "https://github.com/C-Nucifora/m1-core.git", tag = "v0.12.0" }
m1-workspace = { git = "https://github.com/nedlane/m1-workspace.git", tag = "v0.10.0" }
clap = { version = "4", features = ["derive"] }
toml = "1.1"
serde_json = "1"
glob = "0.3"
rayon = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3

